2007-05-29  Georg von Hippel <gmv22@cantab.net>

	* Added additional header tags to FeynML schema (those are not being
	parsed at the moment)

	* Added support for line-parallel arrows to FeynML I/O classes

	* Added a second FeynML test case (with blobs)

2007-05-23  Georg von Hippel <gmv22@cantab.net>

	* Made free and line-parallel arrows properly pointy.

	* Added blob support to FeynML module, improved FeynML styling,
	  added metadata support to FeynML output.

	* Removed redundant type definitions from FeynML schema,
	  added needed types.

2007-05-21  Andy Buckley  <andy@insectnation.org>

	* Incremented version number to 0.3b2 - approaching 0.3 stable release.

	* Made number of curves per half loop scale with the maximum sampled 
	curvature of the underlying line.

	* Added draft mode, so that rapid turnaround of diagrams with complex 3D 
	constructions is possible without changing any code.

2007-05-17  Georg von Hippel <gmv22@cantab.net>

	* Updated FeynML schema to reflect recent changes to FeynML module.

	* Added Gluino line class.

2007-05-16  Georg von Hippel <gmv22@cantab.net>

	* Added support for further styling (arrows, labels) to FeynML module.

	* Added leg sense (in/out, antiparticle) attribute to FeynML schema,
	and corresponding support to FeynML module.

	* Added FreeArrow and ParallelArrow classes for free-standing and
	line-parallel arrows in diagrams.

2007-05-15  Georg von Hippel <gmv22@cantab.net>

	* Improved FeynML writer so as to actually write to an XML file.

2007-05-13  Andy Buckley  <andy@insectnation.org>

	* paint.py: now colours, patterns and line thicknesses are defined here 
	as upper-case constants (via import from PyX). The import * has been removed. 
	The examples have been updated to match.

2007-05-02  Georg von Hippel <gmv22@cantab.net>

	* Added code to FeynML writer to combine dangling vertices and lines
	into external legs. Works only for diagrams where all internal